# POLSL-Mgr-ST-Compiler

./: .gitignore  CMakeLists.txt
arm-none-eabi-gcc_libs/lib/: README.md
benchmark/: bench.py  process_benchmark.py  run_benchmark.py
benchmark/delay/: build.cmd  delay.st  upload.cmd
benchmark/empty/: build.cmd  empty.st
benchmark/latex_table/: real_lreal_comp.tex
benchmark/latex_table/delay/: scan_table.tex  table1.tex  table2.tex
benchmark/latex_table/empty/: scan_table.tex  table1.tex  table2.tex
benchmark/latex_table/optimize_lreal/: scan_table.tex  table1.tex  table2.tex
benchmark/latex_table/optimize_real/: scan_table.tex  table1.tex  table2.tex
benchmark/optimize_lreal/: build.cmd  optimize.st
benchmark/optimize_real/: optimize.st
benchmark/result/: delay_benchmark.xlsx  empty_benchmark.xlsx  optimize_lreal_benchmark.xlsx  optimize_real_benchmark.xlsx
default_ld_script/ld/: plc_default.ld
driver/: plc_linker_script.ld  stlang.cmd  test.ll
example/led_line/: led_line.st  upload.cmd
experiments/: makefile  test1.c  test1.ll
experiments/test1/: makefile  test1.c  test1.ll  test1_a.ll
experiments/test2/: makefile  test.cpp  test.ll
notes/: keywords.md  pous_internal_structure.md
src/: argument_parser.cpp  argument_parser.hpp  ast.hpp  console_color.cpp  console_color.hpp  error.cpp  error.hpp  exception.hpp  file_utils.cpp  file_utils.hpp  main.cpp  position.hpp  st_expression_parser.cpp  st_expression_parser.hpp  st_lexer.cpp  st_lexer.hpp  st_parser.cpp  st_parser.hpp
src/__previous_files/: __ast.hpp  __st_expression_parser.cpp  __st_expression_parser.hpp  __st_parser.cpp  __st_parser.hpp
src/ast/: __ast.hpp  ast.cpp  ast.hpp  ast1.cpp  ast1.hpp  ast1_makros.hpp  function.cpp  function_block.cpp  program.cpp  type.hpp
src/console/: argument_parser.cpp  argument_parser.hpp  color.cpp  color.hpp  command_line_parser.hpp
src/data_frame/: data_frame.cpp  data_frame.hpp
src/driver/: main.cpp
src/error/: error.cpp  error.hpp  error_manager.cpp  error_manager.hpp  error_template.hpp
src/file/: file_utils.cpp  file_utils.hpp
src/frontend/: main.cpp
src/frontend/ast/: ast1.cpp  ast1.hpp  ast1_makros.hpp  formal_call.cpp  function.cpp  function_block.cpp  nonformal_call.cpp  program.cpp  type.hpp
src/frontend/lexer/: st_lexer copy.cpp  st_lexer.cpp  st_lexer.hpp  st_token_type.cpp  st_token_type.hpp
src/frontend/parser/: __parser.cpp  __parser.hpp  int_parse.hpp  st_expression_parser.cpp  st_expression_parser.hpp  st_parser.cpp  st_parser.hpp
src/interpreter/: main.cpp
src/lexer/: st_lexer copy.cpp  st_lexer.cpp  st_lexer.hpp  st_token_type.cpp  st_token_type.hpp
src/packager/: main.cpp
src/parser/: __parser.cpp  __parser.hpp  int_parse.hpp  llvm_codegen.hpp  parser.cpp  parser.hpp  st_expression_parser.cpp  st_expression_parser.hpp  st_parser.cpp  st_parser.hpp
src/plc_conn/: file_utils.cpp  file_utils.hpp  main.cpp  tcp_utils.cpp  tcp_utils.hpp
src/sender/: main.cpp
src/sender/data_frame/: data_frame.cpp  data_frame.hpp
stl/: conversion_func_producer.py
test/: function1.st  literals.txt  test_file.st
test/driver/: output.ll  output.s  output_full_opt.ll  output_no_opt.ll  plc_linker_script.ld  stlang.cmd
test/test1/: __file.h  __file.ll  fahrenheit_to_celsius.st  makefile  test_func.st
test/test3/: makefile  simple.ll  simple_func.st
